--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-03-19
+% \update      2017-03-26
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -139,6 +139,13 @@
    \emph{The home site for the Sequencer64 looping sequencer.}
    \url{https://launchpad.net/seq24}
    2016.
+
+   \bibitem{seq24launchpadmapper}
+   Excds.
+   \emph{A simple mapping for toggling the LEDs on the Novation launchpad
+   together with seq24}
+   \url{https://github.com/Excds/seq24-launchpad-mapper}
+   2013.
 
    \bibitem{seq32}
    Stan Preston (stazed).
