--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2017-03-12
+% \update      2017-04-26
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -50,7 +50,7 @@
 
 \begin{document}
 
-\title{Sequencer64 User Manual 0.90.2}
+\title{Sequencer64 User Manual 0.90.4}
 \author{Chris Ahlstrom \\
    (\texttt{ahlstromcj@gmail.com})}
 \date{\today}
@@ -59,7 +59,7 @@
 \begin{figure}[H]
    \centering 
    \includegraphics[scale=0.50]{Sequencer64-0_9_17.png}
-   \caption*{Inverse Video Mode of Sequencer64}
+   \caption*{Inverse Video Mode}
 \end{figure}
 
 \clearpage                             % moves Contents to next page
@@ -79,7 +79,7 @@
 \label{sec:introduction}
 
    This document describes how to use \textsl{Sequencer64}
-   \cite{sequencer64}, through version 0.90.2,
+   \cite{sequencer64}, through version 0.90.4,
    using the latest commit from the \textbf{master} branch.
 %  \textbf{master} or \textbf{fixups} branches.
    If one is impatient to get started mastering \textsl{Sequencer64},
