--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-03-26
+% \update      2017-04-29
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -167,15 +167,21 @@
 
    \bibitem{sequencer64}
    Chris Ahlstrom.
-   \emph{A continuation of the Sequencer64 project as "Sequencer64".}
+   \emph{A reboot of the Seq24 project as "Sequencer64".}
    \url{https://github.com/ahlstromcj/sequencer64/}
-   2016.
+   2015-2017.
 
    \bibitem{sequencer64doc}
    Chris Ahlstrom.
    \emph{The Sequencer64 User Manual.}
    \url{https://github.com/ahlstromcj/sequencer64-doc/}
-   2016.
+   2015-2017.
+
+   \bibitem{sequencer64packages}
+   Chris Ahlstrom.
+   \emph{Sequencer64 Debian Packages.}
+   \url{https://github.com/ahlstromcj/sequencer64-packages/}
+   2017.
 
    \bibitem{subatomicglue}
    Kevin at subatomicglue.com
