--- a/tex/seq64_menu.tex
+++ b/tex/seq64_menu.tex
@@ -738,12 +738,14 @@
    \texttt{Ctrl} key or other modifier keys.
 
    \index{snapshot}
+   \index{keys!snapshot}
    A \textsl{snapshot} is a briefly preserved state of the patterns.
    One can press a snapshot key, change the state of the patterns for live
    playback, and then release the snapshot key to revert to the state when
    the snapshot key was first pressed.
 
    \index{queue}
+   \index{keys!queue}
    To \textsl{queue}
    a pattern means to ready it for playback upon the next repeat
    of a pattern.  A pattern can be armed immediately, or it can be queued to
@@ -754,6 +756,7 @@
    the next repeat of the pattern.
 
    \index{keep queue}
+   \index{keys!keep queue}
    \index{queue!keep}
    The \textsl{keep queue}
    functionality allows the queue to be held without holding
