--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-03-25
+% \update      2017-05-05
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -890,18 +890,21 @@
    pattern grey, as shown in the following figure.
 
    \index{keys!no ctrl/alt please}
-   \textbf{Warning}:  We do not recommend using \texttt{Ctrl} or \texttt{Alt}
+   \textbf{Warning}:  We do \textbf{not}
+   recommend using \texttt{Ctrl} or \texttt{Alt}
    keys for pattern control.  They conflict with application or desktop
-   settings.  However, one can use the new \textbf{Menu} button in the main
-   window to disable the menu, which makes more operations available.
-   The \texttt{Super} key can be used (if not already used by the desktop
-   environment).  Also available are some of the function keys, and, if
+   settings.  However, if one insists on such hot-key combinations,
+   one can use the new \textbf{Menu} button in the main
+   window to disable the menu, which makes those operations available.
+   The \texttt{Super} key can also be used, if not already used by the desktop
+   environment.  Also available are some of the function keys, and, if
    available, the keypad keys.  These can be configured in
    \textbf{File / Options / Keyboard} and
    \textbf{File / Options / Ext Keys}.
 
    Note that queueing can also be used to turn a pattern \textsl{off}
-   at the end of a pattern.
+   at the end of a pattern.  Also note the "keep queue" functionality described
+   below.
 
 \begin{figure}[H]
    \centering 
@@ -925,10 +928,27 @@
    For example, the minus key or the keypad's slash key can be used, with no
    noticeable flickering due to the keyboard repeat rate.
 
+   \index{keys!backslash}
+   \index{keys!keep queue}
+   \index{queue!permanent}
+   \index{queue!keep queue}
+   Pressing the "keep queue" key (by default, the backslash key)
+   \index{rc file}
+   assigned in the "rc" file
+   activates permanent queue mode until one presses the regular
+   (i.e. temporary)
+   queue function. 
+   After pressing the "keep queue" key, individual pattern
+   toggles occur at the end of the current pattern rather than immediately.
+   “Keep queue” mode is canceled by pressing the normal Queue key.
+
+   This key can be changed in the
+   \textbf{File / Options / Keyboard / Keep queue} field.
+
    \index{keys!replace}
    Note that there is also a "replace" key, which is the left \texttt{Ctrl} key
-   by default, which cannot work, because \textsl{Sequencer64} now uses
-   \texttt{Ctrl-L} is used as a way to click the "L" button.
+   by default (which cannot work, because \textsl{Sequencer64} now uses
+   \texttt{Ctrl-L} as a way to click the "L" button).
    Replacement is a form of muting/unmuting.  When the "replace"
    key is pressed while clicking a sequence, that sequence is unmuted, and all
    of the other sequences are muted.  Again, this is a very inconvenient
@@ -938,21 +958,29 @@
    control, where the MIDI control can be activated, but then the user has to
    click on the desired sequence.  
 
-   \index{keys!backslash}
-   \index{keys!keep queue}
-   \index{queue!permanent}
-   \index{queue!keep queue}
-   Pressing the "keep queue" key (by default, the backslash key)
-   \index{rc file}
-   assigned in the "rc" file.
-   activates permanent queue mode until you use the temporary 
-   queue function again pressing \texttt{Right Ctrl}. 
-   After pressing the "keep queue" key, individual pattern
-   toggles will occur at the end of the current pattern rather than immediately.
-   “Keep queue” mode is canceled by pressing the Queue key (right \texttt{Ctrl}).
+   \index{queue!replace}
+   \index{queue!solo}
+   \textsl{Sequencer64} provides an extension to the replace/solo functionality
+   called "queued-replace" or "queued-solo".  In this feature, when
+   the "keep queue" function is activated, the replace function is queued so
+   that it does not occur until the next time the patterns loop.
+   Here are the steps:
 
-   This key can be changed in the
-   \textbf{File / Options / Keyboard / Keep queue} field.
+   \begin{enumber}
+      \item Start playback with some patterns on. 
+      \item Press and release (click)
+         the "keep queue" hot-key.  This puts the application into "queue" mode.
+         There is no visual indication (yet) of this mode.
+      \item Now press and hold the "replace" hot-key.
+      \item Click the desired pattern hot-key.  Observe that it comes on, or
+         stays on, and that the other playing patterns show the "queued" color
+         (grey).  At the end of the loop, they turn off, and the "replace"
+         pattern is now soloed.
+      \item Click the same pattern hot-key again.  Observe that the other
+         patterns that were toggled off are now queued to be toggled on at the
+         next loop.  Steps 4 and 5 can be repeated endlessly.
+      \item To end the "queued-replace" mode, click the normal "queue hot-key.
+   \end{enumber}
 
    There are more keys defined in the \textbf{Keyboard} dialog, and it is
    worth figuring out what they do, if not documented here.
