More queued-solo notes.

--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -1024,6 +1024,9 @@
    solo status of the replace pattern can be toggled at will, until queue mode
    is exited by pressing and releasing the normal "queue" key.
 
+   If the replace key is \textsl{not} held down, and another pattern's replace
+   hot-key is pressed, that pattern will be queue normally.
+
    If one wants to change the solo functionality to a different pattern,
    simple hold the replace key and click on a different pattern.  The new
    arrangement of soloing is memorized.
