--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-03-11
+% \update      2017-05-07
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -30,8 +30,16 @@
    \label{fig:pattern_edit_window}
 \end{figure}
 
-   Not shown in this figure is the new \textbf{LFO} button in the bottom panel,
-   but it is described later.
+   Not shown in this figure are:
+   
+   \begin{itemize}
+      \item The new \textbf{LFO} button in the bottom panel.
+      \item The new \textbf{Rec Type} button in the bottom panel,.
+   \end{itemize}
+
+   Both are described later, but we need to update the screenshot at some
+   point.
+
    This dialog is complex.
    For exposition, we break it into some common actions, a first panel, a
    second panel, a bottom panel, and a piano-roll/events section.
@@ -1182,6 +1190,17 @@
    \label{fig:pattern_editor_bottom_panel_items}
 \end{figure}
 
+   Until we can get a completely labelled screenshot, here is the
+   latest bottom panel, with the new \textbf{LFO}
+   and \textbf{Recording Type} buttons, and the popup menu for the latter.
+
+\begin{figure}[H]
+   \centering 
+   \includegraphics[scale=0.75]{new/lfo_and_rectype_buttons.png}
+   \caption{Pattern Editor, Additional Bottom Panel Items}
+   \label{fig:pattern_editor_added_bottom_panel_items}
+\end{figure}
+
    \begin{enumber}
       \item \textbf{Event Selector}
       \item \textbf{Event Selection}
@@ -1191,6 +1210,7 @@
       \item \textbf{MIDI Data Pass-Through}
       \item \textbf{Record MIDI Data}
       \item \textbf{Quantized Record}
+      \item \textbf{Recording Type} (Merge, Replace, Expand)
       \item \textbf{Select Recording Volume}
    \end{enumber}
 
@@ -1300,9 +1320,37 @@
    Activating this button will also cause MIDI data to be recorded, but it
    will be quantized on the fly before recording it.
 
+   \itempar{Recording Type}{pattern editor!recording type}
+   In \textsl{Seq24}, the pattern recording worked by merging new notes played
+   as the pattern to be recorded was looped.  This method allows a loop to be
+   built up bit-by-bit.  \textsl{Sequencer64} adds two more methods from
+   Stazed's \textsl{Seq32} project.  The three methods are:
+
+   \begin{enumber}
+      \item \textbf{Merge}. \index{merge}
+      \index{recording type!merge}
+      This is the "legacy" style of recording loops, where notes can
+      accumulate.
+      \item \textbf{Replace.} \index{replace}
+      \index{recording type!replace}
+      In this method of recording, whenever the loop starts over, and a note is
+      pressed, then the existing notes in that loop are erased, and the new
+      note is added.  This provides a good way of correcting major mistakes,
+      live.  Note that this method will not work if adding notes while not
+      recording.
+      \item \textbf{Expand}. \index{expand}
+      \index{recording type!expand}
+      In this method of recording, once the end of the loop is nigh, whether or
+      not any notes are being input, another measure is added to the length of
+      the loop.  This continues indefinitely, whether or not any notes are
+      being recorded.
+   \end{enumber}
+
    \itempar{Vol}{pattern editor!vol}
    This button allows controlling the volume of the recording.
    The velocity of the notes will be set to the selected value upon recording.
+   If the \textbf{Free} item is selected, then the incoming note velocity is
+   preserved.
 
 \begin{figure}[H]
    \centering 
@@ -1314,8 +1362,8 @@
    The values provided are:
 
    \begin{itemize}
-      \item Free (record incoming volumes),
-      \item Fixed 8, Fixed 7, Fixed 6, Fixed 5, Fixed 4, Fixed 3,
+      \item Free (record incoming volumes).
+      \item Fixed 8, Fixed 7, Fixed 6, Fixed 5, Fixed 4, Fixed 3.
       \item Fixed 2, and Fixed 1.
    \end{itemize}
 
@@ -1325,7 +1373,8 @@
    One thing fixed in the 0.90.x version is the ability to store MIDI note-on
    events with the actual velocity provided by the MIDI keyboard used to
    generate the notes.  Previously, even in \textsl{seq24},
-   the "Free" option in the "Vol" menu option did not work.  This is fixed.
+   the \textbf{Free} option in the \textbf{Vol} menu option did not work.
+   This is fixed.
 
 \subsection{Pattern Editor / Common Actions}
 \label{subsec:seq64_pattern_editor_common}
